Add edit avail slots button

--- a/lib/butler_web/live/todo_live/index.html.leex
+++ b/lib/butler_web/live/todo_live/index.html.leex
@@ -51,6 +51,15 @@
                 <button type="button"
                     phx-click="run_scheduler"
                     class="inline-flex items-center p-3 border border-indigo-500 shadow-sm text-sm leading-4 font-medium rounded-full text-indigo-600 bg-white hover:bg-indigo-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+
+                    <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+                    </svg>
+                </button>
+
+                <button type="button"
+                    phx-click="run_scheduler"
+                    class="inline-flex items-center p-3 border border-indigo-500 shadow-sm text-sm leading-4 font-medium rounded-full text-indigo-600 bg-white hover:bg-indigo-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                     <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
