Display currently selected slots

--- a/assets/css/components/day.scss
+++ b/assets/css/components/day.scss
@@ -17,3 +17,14 @@
     }
   }
 }
+
+.events {
+  &__time-slot {
+    @apply absolute w-full border-b;
+  
+    
+    &--active {
+      @apply bg-green-400;
+    }
+  }
+}
