--- a/lib/butler_web/live/todo_live/index.html.leex
+++ b/lib/butler_web/live/todo_live/index.html.leex
@@ -81,14 +81,13 @@
                 </div>
                 <div id="calendar" class="grid grid-cols-7 text-gray-500 divide-x w-full z-10" phx-hook="TimeSlots">
                     <% grouped_todos = group_todos_by_day(@todos) %>
-                    <% grouped_avail_slots = group_available_by_day(sample_streaks()) %>
 
                     <%= for date <- list_week() do %>
                         <%= live_component @socket, DayComponent,
                             date: date,
                             id: date.day,
                             mode: @mode,
-                            slots: Map.get(grouped_avail_slots, date, []),
+                            slots: get_slots_from_date(@dates, date),
                             todos: Map.get(grouped_todos, date, []) %>
                     <% end %>
                 </div>
