--- a/lib/butler_web/templates/layout/_error_notif.html.eex
+++ b/lib/butler_web/templates/layout/_error_notif.html.eex
@@ -12,7 +12,7 @@
                 </div>
                 <div class="ml-3 w-0 flex-1 pt-0.5">
                     <p class="text-sm font-medium text-gray-900">
-                        Something bad happened
+                        Error
                     </p>
                     <p class="mt-1 text-sm text-gray-500">
                         <%= @message %>
