--- a/lib/butler_web/templates/shared/navbar.html.eex
+++ b/lib/butler_web/templates/shared/navbar.html.eex
@@ -52,7 +52,10 @@
           <div>
             <button class="bg-white rounded-full flex text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" id="user-menu" aria-haspopup="true">
               <span class="sr-only">Open user menu</span>
-              <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+              <div class="flex items-center justify-center h-8 w-8 rounded-full bg-red-600 text-white font-bold">
+                <span>U</span>
+              </div>
+
             </button>
           </div>
           <!--
