Select available time slots (#24)
* Add edit avail slots button

* Add select mode for calendar

* Complete drag to highlight slots

* Send/receive selected slots to/from server.

* Remove unused event

* Add schemas for available slots

* Add parsing for slots and streaks

* Fix missing slot in streak

* Update schema. Partially implement find or create (somewhat like upsert)

* Return matching record if one exists

* Update

* Configure migration & schema to  have Ecto return nil on id when violating unique constraint

* Update

* Add slots field to schema

* Remove time_streaks

* Display currently selected slots

* Update available slots from client. Add sorting of indices

* Fix remove slot bug. Add visual cue for 2 modes

* Add dynamic creation of time streaks for GA

* Fix current day indicator

* Update navbar

--- a/assets/css/pages/calendar.scss
+++ b/assets/css/pages/calendar.scss
@@ -5,8 +5,28 @@
 .timeline li::after {
   @apply absolute left-0 w-full bg-gray-200;
 }
-  
+
 .timeline li::after {
   content: '';
   height: 1px;
+}
+
+.banner {
+  &--visual {
+    @apply bg-indigo-600;
+  }
+
+  &--select {
+    @apply bg-green-600;
+  }
+
+  &__icon-bg {
+    &--visual {
+      @apply bg-indigo-800;
+    }
+
+    &--select {
+      @apply bg-green-800;
+    }
+  }
 }
