--- a/lib/butler_web/templates/user_registration/new.html.eex
+++ b/lib/butler_web/templates/user_registration/new.html.eex
@@ -26,7 +26,7 @@
         </div>
         <div>
           <%= label f, :password, class: "sr-only" %>
-          <%= password_input f, :password, required: true, placeholder: "Password", class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %>
+          <%= password_input f, :password, required: true, placeholder: "Password", minLength: 12, maxLength: 80, class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %>
           <%= error_tag f, :password %>
         </div>
       </div>
