--- a/lib/butler_web/live/todo_live/form_component.html.leex
+++ b/lib/butler_web/live/todo_live/form_component.html.leex
@@ -20,7 +20,7 @@
                     <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
                         <div class="sm:col-span-6">
                             <div class="mt-1 flex rounded-md shadow-sm">
-                                <%= text_input f, :name, placeholder: "Do something", class: "flex-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full min-w-0 rounded-md sm:text-sm border-gray-300" %>
+                                <%= text_input f, :name, phx_hook: "FocusNameField", placeholder: "What do you want to do?", id: "todo-name-input", class: "flex-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full min-w-0 rounded-md sm:text-sm border-gray-300" %>
                             </div>
                             <%= error_tag f, :name %>
                         </div>
@@ -38,7 +38,7 @@
                                 Duration (minutes)
                             </label>
                             <div class="mt-1">
-                                <%= number_input f, :duration, class:  "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+                                <%= number_input f, :duration, min: 15, class:  "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
                             </div>
                             <%= error_tag f, :duration %>
                         </div>
