--- a/lib/butler_web/live/page_live.html.leex
+++ b/lib/butler_web/live/page_live.html.leex
@@ -113,6 +113,66 @@
   </div>
 </div>
 
+<!-- This example requires Tailwind CSS v2.0+ -->
+<div class="py-12 bg-white">
+  <div class="max-w-xl mx-auto px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+    <h2 class="sr-only">A better way to send money.</h2>
+    <dl class="space-y-10 lg:space-y-0 lg:grid lg:grid-cols-3 lg:gap-8">
+      <div>
+        <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
+          <!-- Heroicon name: globe-alt -->
+          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+          </svg>
+        </div>
+        <div class="mt-5">
+          <dt class="text-lg leading-6 font-medium text-gray-900">
+            Keep track of your todo list
+          </dt>
+          <dd class="mt-2 text-base text-gray-500">
+            Specify how long the task might take, along with its priority.
+          </dd>
+        </div>
+      </div>
+
+      <div>
+        <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
+          <!-- Heroicon name: scale -->
+          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3" />
+          </svg>
+        </div>
+        <div class="mt-5">
+          <dt class="text-lg leading-6 font-medium text-gray-900">
+            Specify your available time
+          </dt>
+          <dd class="mt-2 text-base text-gray-500">
+            Let Butler know when you're available to do tasks.
+          </dd>
+        </div>
+      </div>
+
+      <div>
+        <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
+          <!-- Heroicon name: lightning-bolt -->
+          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+          </svg>
+        </div>
+        <div class="mt-5">
+          <dt class="text-lg leading-6 font-medium text-gray-900">
+            Autoschedule
+          </dt>
+          <dd class="mt-2 text-base text-gray-500">
+            Butler will schedule tasks that fit into a streak of time.
+          </dd>
+        </div>
+      </div>
+    </dl>
+  </div>
+</div>
+
+
 <div class="bg-white">
   <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
     <div class="bg-indigo-700 rounded-lg shadow-xl overflow-hidden lg:grid lg:grid-cols-2 lg:gap-4">
