Move tailwind classes to stylesheet

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,6 +4,7 @@
 
 @import "tailwindcss/components";
 @import "./components/day.scss";
+@import "./components/new_todo.scss";
 @import "./components/nprogress.scss";
 @import "./pages/calendar.scss";
 
